--- a/config/objects.cfg
+++ b/config/objects.cfg
@@ -1,7 +1,9 @@
-﻿image=1;text=2;sound=3;button=4;checkbox=5;radio_button=6;cursor=7;
-type="image";id=1000000;
-type="text";id=1200000;
-type="sound";id=1300000;
-type="button";id=2000000;image_id=1000001;text_id=1200001;sound_id=1300000;
-type="checkbox";id=2100000;image_id=1000002;text_id=1200002;sound_id=1300000;
-type="radio_button";id=2200000;image_id=1000003;text_id=1200003;sound_id=1300000;
+﻿image=1;text=2;sound=3;ui_component=4;checkbox=8;radio_button=8;textbox=8;start_menu=8;
+category="image";id="logo_big";
+category="text";id="label_hello_world";
+category="sound";id="mouse_click";
+category="ui_component";id="button";type="button";position=100,400;image_id="button_120x24";text_id="button_click_me";sound_id="mouse_click";
+category="ui_component";id="checkbox";type="checkbox";position=100,450;image_id="checkbox";text_id="checkbox_some_text";sound_id="mouse_click";
+category="ui_component";id="radio_button";type="radio_button";position=100,500;image_id="radio_button";text_id="radio_button_text";sound_id="mouse_click";
+category="ui_component";id="textbox";type="textbox";position=100,550;image_id="textbox_280x24";font_id="consola_12";max_chars=32;text_color=0,0,0,255;
+category="start_menu";id="start_menu";components_ids="button","checkbox","radio_button","textbox";
