--- a/SDL2_Engine_Project.vcxproj
+++ b/SDL2_Engine_Project.vcxproj
@@ -96,7 +96,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\GLEW\include;$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>true</UseFullPaths>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -105,8 +105,8 @@
       <TargetMachine>MachineX86</TargetMachine>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLEW\lib\Release\x64;$(SolutionDir)dependencies\GLEW\bin\Release\x64;$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
@@ -117,7 +117,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\GLEW\include;$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>false</UseFullPaths>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -128,23 +128,23 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLEW\lib\Release\x64;$(SolutionDir)dependencies\GLEW\bin\Release\x64;$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\GLEW\include;$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>true</UseFullPaths>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLEW\lib\Release\x64;$(SolutionDir)dependencies\GLEW\bin\Release\x64;$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -152,20 +152,21 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies\GLEW\include;$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>false</UseFullPaths>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLEW\lib\Release\x64;$(SolutionDir)dependencies\GLEW\bin\Release\x64;$(SolutionDir)dependencies\SDL2\SDL2\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_image\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_ttf\lib\x64;$(SolutionDir)dependencies\SDL2\SDL2_mixer\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
       <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\app\config\AppConfig.cpp" />
+    <ClCompile Include="source\app\OpenGLExperiment.cpp" />
     <ClCompile Include="source\app\ui\menus\start_menu\config\StartMenuConfig.cpp" />
     <ClCompile Include="source\app\ui\menus\start_menu\StartMenu.cpp" />
     <ClCompile Include="source\components\ui\base_classes\UIComponentBase.cpp" />
@@ -256,6 +257,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\app\config\AppConfig.h" />
+    <ClInclude Include="source\app\OpenGLExperiment.h" />
     <ClInclude Include="source\app\ui\menus\start_menu\config\StartMenuConfig.h" />
     <ClInclude Include="source\app\ui\menus\start_menu\StartMenu.h" />
     <ClInclude Include="source\components\ui\base_classes\UIComponentBase.h" />
