--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,24 +1,26 @@
-﻿image=1;font=6;text=12;sound=16;music=17;ui_image=17;label=18;button=19;checkbox=20;radio_button=21;textbox=22;menu=23;
-type=image;id=logo_big;file_name=assets/images/logo_big.png;frames=1;
-type=image;id=button_120x24;file_name=assets/images/ui/button_120x24.png;frames=3;
-type=image;id=checkbox;file_name=assets/images/ui/checkbox.png;frames=2;
-type=image;id=radio_button;file_name=assets/images/ui/radio_button.png;frames=2;
-type=image;id=textbox_280x24;file_name=assets/images/ui/textbox_280x24.png;frames=1;
-type=font;id=consola_12;file_name=assets/fonts/Consola.ttf;size=12;wrap_align=1;
-type=font;id=consola_14;file_name=assets/fonts/Consola.ttf;size=14;wrap_align=1;
-type=font;id=consola_18;file_name=assets/fonts/Consola.ttf;size=18;wrap_align=1;
-type=font;id=arial_12;file_name=assets/fonts/Arial.ttf;size=12;wrap_align=1;
-type=font;id=arial_14;file_name=assets/fonts/Arial.ttf;size=14;wrap_align=1;
-type=font;id=arial_18;file_name=assets/fonts/Arial.ttf;size=18;wrap_align=1;
-type=text;id=label_hello_world;color=0,127,127,255;font_id=consola_18;wrap_width=0;en=Hello\nWorld;bg=Здравей\nСвят;
-type=text;id=button_click_me;color=0,0,0,255;font_id=arial_12;wrap_width=100;en=Click me!;bg=Шляпай ме!;
-type=text;id=checkbox_some_text;color=0,0,0,255;font_id=arial_12;wrap_width=0;en=Some text;bg=Някакъв текст;
-type=text;id=radio_button_text;color=0,0,0,255;font_id=arial_12;wrap_width=0;en=Radio button text;bg=Текст на радио бутона;
-type=sound;id=mouse_click;file_name=assets/sounds/clicks/mouse_click.wav;volume=128;
-type=ui_image;id=logo_big;position=300,50;image_id=logo_big;
-type=label;id=label_hello_world;position=50,250;text_id=label_hello_world;
-type=button;id=button;position=100,400;image_id=button_120x24;text_id=button_click_me;sound_id=mouse_click;
-type=checkbox;id=checkbox;position=100,450;image_id=checkbox;text_id=checkbox_some_text;sound_id=mouse_click;
-type=radio_button;id=radio_button;position=100,500;image_id=radio_button;text_id=radio_button_text;sound_id=mouse_click;
-type=textbox;id=textbox;position=100,550;image_id=textbox_280x24;font_id=consola_12;max_chars=32;text_color=0,0,0,255;
-type=menu;id=start_menu;position=90,390,300,200;components_ids=button,checkbox,radio_button,textbox;
+﻿IMAGE=1;FONT=7;TEXT=13;SOUND=16;MUSIC=17;UI_IMAGE=17;LABEL=18;BUTTON=19;CHECKBOX=22;RADIO_BUTTON=23;TEXTBOX=24;MENU=25;
+type=IMAGE;id=LOGO_BIG;file_name=assets/images/logo_big.png;frames=1;
+type=IMAGE;id=BUTTON_120x24;file_name=assets/images/ui/button_120x24.png;frames=3;
+type=IMAGE;id=CHECKBOX;file_name=assets/images/ui/checkbox.png;frames=2;
+type=IMAGE;id=RADIO_BUTTON;file_name=assets/images/ui/radio_button.png;frames=2;
+type=IMAGE;id=TEXTBOX_280x24;file_name=assets/images/ui/textbox_280x24.png;frames=1;
+type=IMAGE;id=TERRAIN_TILES;file_name=assets/images/terrain/terrain_tiles.png;frames=8;
+type=FONT;id=CONSOLA_12;file_name=assets/fonts/Consola.ttf;size=12;wrap_align=1;
+type=FONT;id=CONSOLA_14;file_name=assets/fonts/Consola.ttf;size=14;wrap_align=1;
+type=FONT;id=CONSOLA_18;file_name=assets/fonts/Consola.ttf;size=18;wrap_align=1;
+type=FONT;id=ARIAL_12;file_name=assets/fonts/Arial.ttf;size=12;wrap_align=1;
+type=FONT;id=ARIAL_14;file_name=assets/fonts/Arial.ttf;size=14;wrap_align=1;
+type=FONT;id=ARIAL_18;file_name=assets/fonts/Arial.ttf;size=18;wrap_align=1;
+type=TEXT;id=BTN_STARTMENU_NEWGAME;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=New game;bg=Нова игра;
+type=TEXT;id=BTN_STARTMENU_SETTINGS;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=Settings;bg=Настройки;
+type=TEXT;id=BTN_STARTMENU_QUIT;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=Quit;bg=Изход;
+type=SOUND;id=MOUSE_CLICK;file_name=assets/sounds/clicks/mouse_click.wav;volume=128;
+type=UI_IMAGE;id=LOGO_BIG;position=300,50;image_id=LOGO_BIG;
+type=LABEL;id=LABEL_HELLO_WORLD;position=50,250;text_id=BTN_STARTMENU_NEWGAME;
+type=BUTTON;id=BTN_STARTMENU_NEWGAME;position=580,100;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
+type=BUTTON;id=BTN_STARTMENU_SETTINGS;position=580,140;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_SETTINGS;sound_id=MOUSE_CLICK;
+type=BUTTON;id=BTN_STARTMENU_QUIT;position=580,180;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_QUIT;sound_id=MOUSE_CLICK;
+type=CHECKBOX;id=CHECKBOX;position=100,450;image_id=CHECKBOX;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
+type=RADIO_BUTTON;id=RADIO_BUTTON;position=100,500;image_id=RADIO_BUTTON;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
+type=TEXTBOX;id=TEXTBOX;position=100,550;image_id=TEXTBOX_280x24;font_id=CONSOLA_12;max_chars=32;text_color=0,0,0,255;
+type=MENU;id=START_MENU;position=560,80,160,144;components_ids=BTN_STARTMENU_NEWGAME,BTN_STARTMENU_SETTINGS,BTN_STARTMENU_QUIT;
