--- a/SDL2_Engine_Project.vcxproj
+++ b/SDL2_Engine_Project.vcxproj
@@ -166,7 +166,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\app\config\AppConfig.cpp" />
+    <ClCompile Include="source\app\game\config\GameConfig.cpp" />
+    <ClCompile Include="source\app\game\config\GameObjectConfig.cpp" />
+    <ClCompile Include="source\app\game\Game.cpp" />
+    <ClCompile Include="source\app\game\Camera.cpp" />
+    <ClCompile Include="source\app\game\GameObject.cpp" />
+    <ClCompile Include="source\app\AppHelpers.cpp" />
     <ClCompile Include="source\app\OpenGLExperiment.cpp" />
+    <ClCompile Include="source\app\ui\menus\config\MenuManagerConfig.cpp" />
+    <ClCompile Include="source\app\ui\menus\console_menu\ConsoleMenu.cpp" />
+    <ClCompile Include="source\app\ui\menus\MenuManager.cpp" />
     <ClCompile Include="source\app\ui\menus\start_menu\config\StartMenuConfig.cpp" />
     <ClCompile Include="source\app\ui\menus\start_menu\StartMenu.cpp" />
     <ClCompile Include="source\components\ui\base_classes\UIComponentBase.cpp" />
@@ -186,6 +195,7 @@
     <ClCompile Include="source\components\audio\Music.cpp" />
     <ClCompile Include="source\components\drawing\DynamicText.cpp" />
     <ClCompile Include="source\engine\config\EngineConfig.cpp" />
+    <ClCompile Include="source\managers\ManagersHelpers.cpp" />
     <ClCompile Include="source\sdl_utils\Utils.cpp" />
     <ClCompile Include="source\utils\geometry\Circle.cpp" />
     <ClCompile Include="source\utils\input_output\ConfigReaderUtils.cpp" />
@@ -257,7 +267,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\app\config\AppConfig.h" />
+    <ClInclude Include="source\app\Defines.h" />
+    <ClInclude Include="source\app\game\config\GameConfig.h" />
+    <ClInclude Include="source\app\game\config\GameObjectConfig.h" />
+    <ClInclude Include="source\app\game\Game.h" />
+    <ClInclude Include="source\app\game\Camera.h" />
+    <ClInclude Include="source\app\game\GameObject.h" />
+    <ClInclude Include="source\app\IApp.h" />
+    <ClInclude Include="source\app\AppHelpers.h" />
     <ClInclude Include="source\app\OpenGLExperiment.h" />
+    <ClInclude Include="source\app\ui\menus\config\MenuManagerConfig.h" />
+    <ClInclude Include="source\app\ui\menus\console_menu\ConsoleMenu.h" />
+    <ClInclude Include="source\app\ui\menus\MenuManager.h" />
     <ClInclude Include="source\app\ui\menus\start_menu\config\StartMenuConfig.h" />
     <ClInclude Include="source\app\ui\menus\start_menu\StartMenu.h" />
     <ClInclude Include="source\components\ui\base_classes\UIComponentBase.h" />
@@ -278,6 +299,7 @@
     <ClInclude Include="source\components\drawing\DynamicText.h" />
     <ClInclude Include="source\defines\ConfigFilePaths.h" />
     <ClInclude Include="source\engine\config\EngineConfig.h" />
+    <ClInclude Include="source\managers\ManagersHelpers.h" />
     <ClInclude Include="source\sdl_utils\Utils.h" />
     <ClInclude Include="source\utils\geometry\Circle.h" />
     <ClInclude Include="source\utils\input_output\ConfigReaderUtils.h" />
