* Final commit to this branch * Removed all the components stuff * Add more standard library headers to the precompiled header * Added a binary struct class that can read and store data read from binary files * The binary format consists of a struct entry and data that are contiguous in memory

--- a/source/system/System.vcxproj
+++ b/source/system/System.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="utils\containers\BinaryStruct.cpp" />
     <ClCompile Include="components\audio\AudioObject.cpp" />
     <ClCompile Include="components\audio\Music.cpp" />
     <ClCompile Include="components\audio\Sound.cpp" />
@@ -100,6 +101,7 @@
     <ClCompile Include="utils\time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="utils\containers\BinaryStruct.h" />
     <ClInclude Include="components\audio\AudioObject.h" />
     <ClInclude Include="components\audio\Music.h" />
     <ClInclude Include="components\audio\Sound.h" />
