--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,26 +1,26 @@
-﻿IMAGE=1;FONT=7;TEXT=13;SOUND=16;MUSIC=17;UI_IMAGE=17;LABEL=18;BUTTON=19;CHECKBOX=22;RADIO_BUTTON=23;TEXTBOX=24;MENU=25;
-type=IMAGE;id=LOGO_BIG;file_name=assets/images/logo_big.png;frames=1;
-type=IMAGE;id=BUTTON_120x24;file_name=assets/images/ui/button_120x24.png;frames=3;
-type=IMAGE;id=CHECKBOX;file_name=assets/images/ui/checkbox.png;frames=2;
-type=IMAGE;id=RADIO_BUTTON;file_name=assets/images/ui/radio_button.png;frames=2;
-type=IMAGE;id=TEXTBOX_280x24;file_name=assets/images/ui/textbox_280x24.png;frames=1;
-type=IMAGE;id=TERRAIN_TILES;file_name=assets/images/terrain/terrain_tiles.png;frames=8;
-type=FONT;id=CONSOLA_12;file_name=assets/fonts/Consola.ttf;size=12;wrap_align=1;
-type=FONT;id=CONSOLA_14;file_name=assets/fonts/Consola.ttf;size=14;wrap_align=1;
-type=FONT;id=CONSOLA_18;file_name=assets/fonts/Consola.ttf;size=18;wrap_align=1;
-type=FONT;id=ARIAL_12;file_name=assets/fonts/Arial.ttf;size=12;wrap_align=1;
-type=FONT;id=ARIAL_14;file_name=assets/fonts/Arial.ttf;size=14;wrap_align=1;
-type=FONT;id=ARIAL_18;file_name=assets/fonts/Arial.ttf;size=18;wrap_align=1;
-type=TEXT;id=BTN_STARTMENU_NEWGAME;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=New game;bg=Нова игра;
-type=TEXT;id=BTN_STARTMENU_SETTINGS;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=Settings;bg=Настройки;
-type=TEXT;id=BTN_STARTMENU_QUIT;color=0,0,0,255;font_id=ARIAL_14;wrap_width=100;en=Quit;bg=Изход;
-type=SOUND;id=MOUSE_CLICK;file_name=assets/sounds/clicks/mouse_click.wav;volume=128;
-type=UI_IMAGE;id=LOGO_BIG;position=300,50;image_id=LOGO_BIG;
-type=LABEL;id=LABEL_HELLO_WORLD;position=50,250;text_id=BTN_STARTMENU_NEWGAME;
-type=BUTTON;id=BTN_STARTMENU_NEWGAME;position=580,100;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
-type=BUTTON;id=BTN_STARTMENU_SETTINGS;position=580,140;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_SETTINGS;sound_id=MOUSE_CLICK;
-type=BUTTON;id=BTN_STARTMENU_QUIT;position=580,180;image_id=BUTTON_120x24;text_id=BTN_STARTMENU_QUIT;sound_id=MOUSE_CLICK;
-type=CHECKBOX;id=CHECKBOX;position=100,450;image_id=CHECKBOX;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
-type=RADIO_BUTTON;id=RADIO_BUTTON;position=100,500;image_id=RADIO_BUTTON;text_id=BTN_STARTMENU_NEWGAME;sound_id=MOUSE_CLICK;
-type=TEXTBOX;id=TEXTBOX;position=100,550;image_id=TEXTBOX_280x24;font_id=CONSOLA_12;max_chars=32;text_color=0,0,0,255;
-type=MENU;id=START_MENU;position=560,80,160,144;components_ids=BTN_STARTMENU_NEWGAME,BTN_STARTMENU_SETTINGS,BTN_STARTMENU_QUIT;
+﻿Image=1;Font=7;Text=13;Sound=16;Music=17;ImageBox=17;Label=18;Button=19;Checkbox=22;RadioButton=23;TextBox=24;Menu=25;
+Type=Image;Id=0;Name=LogoBig;FileName=assets/images/logo_big.png;Frames=1;
+Type=Image;Id=1;Name=Button_120x24;FileName=assets/images/ui/button_120x24.png;Frames=3;
+Type=Image;Id=2;Name=Checkbox;FileName=assets/images/ui/checkbox.png;Frames=2;
+Type=Image;Id=3;Name=RadioButton;FileName=assets/images/ui/radio_button.png;Frames=2;
+Type=Image;Id=4;Name=Textbox_280x24;FileName=assets/images/ui/textbox_280x24.png;Frames=1;
+Type=Image;Id=5;Name=TerrainTiles;FileName=assets/images/terrain/terrain_tiles.png;Frames=8;
+Type=Font;Id=0;Name=Consola_12;FileName=assets/fonts/Consola.ttf;Size=12;WrapAlign=1;
+Type=Font;Id=1;Name=Consola_14;FileName=assets/fonts/Consola.ttf;Size=14;WrapAlign=1;
+Type=Font;Id=2;Name=Consola_18;FileName=assets/fonts/Consola.ttf;Size=18;WrapAlign=1;
+Type=Font;Id=3;Name=Arial_12;FileName=assets/fonts/Arial.ttf;Size=12;WrapAlign=1;
+Type=Font;Id=4;Name=Arial_14;FileName=assets/fonts/Arial.ttf;Size=14;WrapAlign=1;
+Type=Font;Id=5;Name=Arial_18;FileName=assets/fonts/Arial.ttf;Size=18;WrapAlign=1;
+Type=Text;Id=0;Name=ButtonStartMenuNewGame;Color=0,0,0,255;Font=Arial_14;FontId=4;WrapWidth=100;EN=New game;BG=Нова игра;
+Type=Text;Id=1;Name=ButtonStartMenuSettings;Color=0,0,0,255;Font=Arial_14;FontId=4;WrapWidth=100;EN=Settings;BG=Настройки;
+Type=Text;Id=2;Name=ButtonStartMenuQuit;Color=0,0,0,255;Font=Arial_14;FontId=4;WrapWidth=100;EN=Quit;BG=Изход;
+Type=Sound;Id=0;Name=MouseClick;FileName=assets/sounds/clicks/mouse_click.wav;Volume=128;
+Type=ImageBox;Id=0;Name=LogoBig;Position=300,50;Image=LogoBig;ImageId=0;
+Type=Label;Id=0;Name=LabelHelloWorld;Position=50,250;Text=ButtonStartMenuNewGame;TextId=0;
+Type=Button;Id=0;Name=ButtonStartMenuNewGame;Position=580,100;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuNewGame;TextId=0;Sound=MouseClick;SoundId=0;
+Type=Button;Id=1;Name=ButtonStartMenuSettings;Position=580,140;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuSettings;TextId=1;Sound=MouseClick;SoundId=0;
+Type=Button;Id=2;Name=ButtonStartMenuQuit;Position=580,180;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuQuit;TextId=2;Sound=MouseClick;SoundId=0;
+Type=Checkbox;Id=0;Name=Checkbox;Position=100,450;Image=Checkbox;ImageId=2;Text=ButtonStartMenuNewGame;TextId=0;
+Type=RadioButton;Id=0;Name=RadioButton;Position=100,500;Image=RadioButton;ImageId=3;Text=ButtonStartMenuNewGame;TextId=0;Sound=MouseClick;SoundId=0;
+Type=Textbox;Id=0;Name=Textbox;Position=100,550;Image=Textbox_280x24;ImageId=4;Font=Consola_12;FontId=0;MaximumChars=32;TextColor=0,0,0,255;
+Type=Menu;Id=0;Name=StartMenu;Position=560,80,160,144;Components=ButtonStartMenuNewGame,ButtonStartMenuSettings,ButtonStartMenuQuit;ComponentIds=0,1,2;
