--- a/config/system.cfg
+++ b/config/system.cfg
@@ -1,3 +1,3 @@
-﻿window=1;renderer=2;
-type=window;title=Application;pos_x=536805376;pos_y=536805376;width=1280;height=720;flags=36;
-type=renderer;color=223,223,223,255;flags=2;
+﻿Window=1;Renderer=2;
+Type=Window;Title=Application;PosX=536805376;PosY=536805376;Width=1280;Height=720;Flags=36;
+Type=Renderer;Color=223,223,223,255;Flags=2;
