Update build system and add Linux support TODO Revisit utils/Defines.h and Time.h

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-*.exe
-*.obj
-*.tlog
-*.pdb
-*.suo
-*.db
-*.db-shm
-*.db-wal
-*.opendb
-*.ipch
-/.vs/
 /.git/
+/_distribution
 /build
-/prj/vs2019
+/prj/Windows
+/prj/Linux
 !/prj/premake5.exe
