--- a/Config/Config.cfg
+++ b/Config/Config.cfg
@@ -1,29 +1,29 @@
 ﻿Image=1;String=7;Font=10;Text=16;Sound=19;Music=20;ImageBox=20;Label=21;Button=22;Checkbox=25;RadioButton=26;TextBox=27;Menu=28;
-Type=Image;Id=0;Name=LogoBig;FileName=Assets/Images/logo_big.png;Frames=1;
-Type=Image;Id=1;Name=Button_120x24;FileName=Assets/Images/UI/button_120x24.png;Frames=3;
-Type=Image;Id=2;Name=Checkbox;FileName=Assets/Images/UI/checkbox.png;Frames=2;
-Type=Image;Id=3;Name=RadioButton;FileName=Assets/Images/UI/radio_button.png;Frames=2;
-Type=Image;Id=4;Name=Textbox_280x24;FileName=Assets/Images/UI/textbox_280x24.png;Frames=1;
-Type=Image;Id=5;Name=TerrainTiles;FileName=Assets/Images/Terrain/terrain_tiles.png;Frames=8;
-Type=String;Id=0;Name=StartMenuNewGame;EN=New game;BG=Нова игра;
-Type=String;Id=1;Name=StartMenuSettings;EN=Settings;BG=Настройки;
-Type=String;Id=2;Name=StartMenuQuit;EN=Quit;BG=Изход;
-Type=Font;Id=0;Name=Consola_12;FileName=Assets/Fonts/Consola.ttf;Size=12;WrapAlign=1;
-Type=Font;Id=1;Name=Consola_14;FileName=Assets/Fonts/Consola.ttf;Size=14;WrapAlign=1;
-Type=Font;Id=2;Name=Consola_18;FileName=Assets/Fonts/Consola.ttf;Size=18;WrapAlign=1;
-Type=Font;Id=3;Name=Arial_12;FileName=Assets/Fonts/Arial.ttf;Size=12;WrapAlign=1;
-Type=Font;Id=4;Name=Arial_14;FileName=Assets/Fonts/Arial.ttf;Size=14;WrapAlign=1;
-Type=Font;Id=5;Name=Arial_18;FileName=Assets/Fonts/Arial.ttf;Size=18;WrapAlign=1;
-Type=Text;Id=0;Name=ButtonStartMenuNewGame;Color=0,0,0,255;String=StartMenuNewGame;StringId=0;Font=Arial_14;FontId=4;WrapWidth=100;
-Type=Text;Id=1;Name=ButtonStartMenuSettings;Color=0,0,0,255;String=StartMenuSettings;StringId=1;Font=Arial_14;FontId=4;WrapWidth=100;
-Type=Text;Id=2;Name=ButtonStartMenuQuit;Color=0,0,0,255;String=StartMenuQuit;StringId=2;Font=Arial_14;FontId=4;WrapWidth=100;
-Type=Sound;Id=0;Name=MouseClick;FileName=Assets/Sounds/Clicks/mouse_click.wav;Volume=128;
-Type=ImageBox;Id=0;Name=LogoBig;Position=300,50;Image=LogoBig;ImageId=0;
-Type=Label;Id=0;Name=LabelHelloWorld;Position=50,250;Text=ButtonStartMenuNewGame;TextId=0;
-Type=Button;Id=0;Name=ButtonStartMenuNewGame;Position=580,100;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuNewGame;TextId=0;Sound=MouseClick;SoundId=0;
-Type=Button;Id=1;Name=ButtonStartMenuSettings;Position=580,140;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuSettings;TextId=1;Sound=MouseClick;SoundId=0;
-Type=Button;Id=2;Name=ButtonStartMenuQuit;Position=580,180;Image=Button_120x24;ImageId=1;Text=ButtonStartMenuQuit;TextId=2;Sound=MouseClick;SoundId=0;
-Type=Checkbox;Id=0;Name=Checkbox;Position=100,450;Image=Checkbox;ImageId=2;Text=ButtonStartMenuNewGame;TextId=0;
-Type=RadioButton;Id=0;Name=RadioButton;Position=100,500;Image=RadioButton;ImageId=3;Text=ButtonStartMenuNewGame;TextId=0;Sound=MouseClick;SoundId=0;
-Type=Textbox;Id=0;Name=Textbox;Position=100,550;Image=Textbox_280x24;ImageId=4;Font=Consola_12;FontId=0;MaximumChars=32;TextColor=0,0,0,255;
-Type=Menu;Id=0;Name=StartMenu;Position=560,80,160,144;Components=ButtonStartMenuNewGame,ButtonStartMenuSettings,ButtonStartMenuQuit;ComponentIds=0,1,2;
+Type=Image;Id=0;FileName=Assets/Images/logo_big.png;Frames=1;
+Type=Image;Id=1;FileName=Assets/Images/UI/button_120x24.png;Frames=3;
+Type=Image;Id=2;FileName=Assets/Images/UI/checkbox.png;Frames=2;
+Type=Image;Id=3;FileName=Assets/Images/UI/radio_button.png;Frames=2;
+Type=Image;Id=4;FileName=Assets/Images/UI/textbox_280x24.png;Frames=1;
+Type=Image;Id=5;FileName=Assets/Images/Terrain/terrain_tiles.png;Frames=8;
+Type=String;Id=0;EN=New game;BG=Нова игра;
+Type=String;Id=1;EN=Settings;BG=Настройки;
+Type=String;Id=2;EN=Quit;BG=Изход;
+Type=Font;Id=0;FileName=Assets/Fonts/Consola.ttf;Size=12;WrapAlign=1;
+Type=Font;Id=1;FileName=Assets/Fonts/Consola.ttf;Size=14;WrapAlign=1;
+Type=Font;Id=2;FileName=Assets/Fonts/Consola.ttf;Size=18;WrapAlign=1;
+Type=Font;Id=3;FileName=Assets/Fonts/Arial.ttf;Size=12;WrapAlign=1;
+Type=Font;Id=4;FileName=Assets/Fonts/Arial.ttf;Size=14;WrapAlign=1;
+Type=Font;Id=5;FileName=Assets/Fonts/Arial.ttf;Size=18;WrapAlign=1;
+Type=Text;Id=0;Color=0,0,0,255;StringId=0;FontId=4;WrapWidth=100;
+Type=Text;Id=1;Color=0,0,0,255;StringId=1;FontId=4;WrapWidth=100;
+Type=Text;Id=2;Color=0,0,0,255;StringId=2;FontId=4;WrapWidth=100;
+Type=Sound;Id=0;FileName=Assets/Sounds/Clicks/mouse_click.wav;Volume=128;
+Type=ImageBox;Id=0;Position=300,50;ImageId=0;
+Type=Label;Id=0;Position=50,250;TextId=0;
+Type=Button;Id=0;Position=580,100;ImageId=1;TextId=0;SoundId=0;
+Type=Button;Id=1;Position=580,140;ImageId=1;TextId=1;SoundId=0;
+Type=Button;Id=2;Position=580,180;ImageId=1;TextId=2;SoundId=0;
+Type=Checkbox;Id=0;Position=100,450;ImageId=2;TextId=0;
+Type=RadioButton;Id=0;Position=100,500;ImageId=3;TextId=0;SoundId=0;
+Type=Textbox;Id=0;Position=100,550;ImageId=4;FontId=0;MaximumChars=32;TextColor=0,0,0,255;
+Type=Menu;Id=0;Position=560,80,160,144;ComponentIds=0,1,2;
